# django-starter-kit

./: .gitignore  README.md  audit_log.md  pyproject.toml  run_course_tests.py  schema.yaml
accounts/: admin.py  permissions.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_bio_user_date_of_birth_and_more.py
accounts/views/: auth.py  user.py
apps/accounts/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py
apps/blog/: TEST_README.md  admin.py  exceptions.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/chats/: admin.py  apps.py  consumers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  versioning.py  views.py
apps/common/: mixins.py  pagination.py  utils.py
apps/course/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/events/: README.md  admin.py  apps.py  consumers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/payment/: models.py
audit_log/: models.py  urls.py  utils.py
audit_log/migrations/: 0001_initial.py  0002_auditlog_priority_and_more.py
common/: admin.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
feedback/: signals.py  urls.py
notifications/: urls.py  views.py
payment/: urls.py  views.py
tests/: test_audit_log.py  test_auth.py  test_common_crud.py  test_course_api.py  test_course_security.py  test_payment_crud.py
(+61 files in other folders)
